# glowtalk

./: .gitignore  Design.md  README.md  alembic.ini  default.nix  flake.nix  pyproject.toml  pytest.ini  shell.nix
.github/workflows/: ci.yml
glowtalk/: __init__.py  __main__.py  api.py  audiobook.py  cli.py  convert.py  database.py  glowfic_scraper.py  idle.py  models.py  segment.py  server.py  speak.py  worker.py
glowtalk/static/: package-lock.json  package.json
glowtalk/static/src/: App.tsx  main.tsx  styles.css  types.ts
glowtalk/static/src/components/: AudiobookContent.css  AudiobookContent.tsx  ControlStrip.tsx  ScrapeForm.tsx  VoiceSelector.tsx  WorksList.tsx
glowtalk/static/src/pages/: AudiobookDetails.css  AudiobookDetails.tsx  Home.tsx  WorkDetails.tsx
glowtalk/static/src/styles/: VoiceSelector.css
migrations/: README.md  env.py
migrations/versions/: 3c7acc64b5ab_add_work_queue_and_enhance_audiobook_.py
tests/: conftest.py  test_api.py  test_glowfic_scraper.py  test_integration.py  test_progress_reporter.py  test_segment.py  test_sse_parser.py
