[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glowtalk"
version = "0.1.0"
description = "Generate audiobooks for Glowfics"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
]

[project.scripts]
glowtalk = "glowtalk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["glowtalk"]
