[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glowtalk"
version = "0.1.0"
description = "Generate audiobooks for Glowfics"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = []
dependencies = [
    "tts>=0.22.0",
    "beautifulsoup4>=4.12.3",
    "sqlalchemy>=2.0.36",
    "pysbd>=0.3.1",
    "alembic>=1.14.0",
    "fastapi>=0.115.5",
    "uvicorn>=0.32.1",
    "pydantic>=2.6.3",
    "python-multipart>=0.0.17",
    "httpx>=0.27.0",
    "ffmpeg-python>=0.2.0",
    "pydub>=0.25.1",
]

[project.scripts]
glowtalk = "glowtalk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["glowtalk"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-watch>=4.2.0",
    "pytest-httpx>=0.34.0",
    "pytest-asyncio>=0.24.0",
]
macos = ["pyobjc>=10.3.1"]
